internal/parser/grammar/minijava_parser.go
// Code generated from grammar/MiniJava.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // MiniJava
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type MiniJavaParser struct {
	*antlr.BaseParser
}

var MiniJavaParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func minijavaParserInit() {
	staticData := &MiniJavaParserStaticData
	staticData.LiteralNames = []string{
		"", "'class'", "'extends'", "'{'", "'}'", "'public'", "'static'", "'void'",
		"'main'", "'('", "'String'", "'['", "']'", "')'", "';'", "','", "'if'",
		"'else'", "'while'", "'System.out.println'", "'='", "'return'", "'recur'",
		"'?'", "':'", "'.'", "'length'", "'-'", "'!'", "'new'", "'int'", "'+'",
		"'*'", "'<'", "'&&'", "'this'", "'boolean'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "INT", "BOOL", "ID", "WS", "COMMENT", "LINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"goal", "mainClassDeclaration", "classDeclaration", "mainClassBody",
		"mainMethod", "mainMethodDeclaration", "classBody", "fieldDeclaration",
		"varDeclaration", "methodDeclaration", "methodBody", "formalParameters",
		"formalParameterList", "formalParameter", "type", "statement", "expression",
		"methodArgumentList", "intArrayType", "booleanType", "intType",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// MiniJavaParserInit initializes any static state used to implement MiniJavaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewMiniJavaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MiniJavaParserInit() {
	staticData := &MiniJavaParserStaticData
	staticData.once.Do(minijavaParserInit)
}

// NewMiniJavaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewMiniJavaParser(input antlr.TokenStream) *MiniJavaParser {
	MiniJavaParserInit()
	this := new(MiniJavaParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &MiniJavaParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "MiniJava.g4"

	return this
}

// MiniJavaParser tokens.
const (
	MiniJavaParserEOF          = antlr.TokenEOF
	MiniJavaParserT__0         = 1
	MiniJavaParserT__1         = 2
	MiniJavaParserT__2         = 3
	MiniJavaParserT__3         = 4
	MiniJavaParserT__4         = 5
	MiniJavaParserT__5         = 6
	MiniJavaParserT__6         = 7
	MiniJavaParserT__7         = 8
	MiniJavaParserT__8         = 9
	MiniJavaParserT__9         = 10
	MiniJavaParserT__10        = 11
	MiniJavaParserT__11        = 12
	MiniJavaParserT__12        = 13
	MiniJavaParserT__13        = 14
	MiniJavaParserT__14        = 15
	MiniJavaParserT__15        = 16
	MiniJavaParserT__16        = 17
	MiniJavaParserT__17        = 18
	MiniJavaParserT__18        = 19
	MiniJavaParserT__19        = 20
	MiniJavaParserT__20        = 21
	MiniJavaParserT__21        = 22
	MiniJavaParserT__22        = 23
	MiniJavaParserT__23        = 24
	MiniJavaParserT__24        = 25
	MiniJavaParserT__25        = 26
	MiniJavaParserT__26        = 27
	MiniJavaParserT__27        = 28
	MiniJavaParserT__28        = 29
	MiniJavaParserT__29        = 30
	MiniJavaParserT__30        = 31
	MiniJavaParserT__31        = 32
	MiniJavaParserT__32        = 33
	MiniJavaParserT__33        = 34
	MiniJavaParserT__34        = 35
	MiniJavaParserT__35        = 36
	MiniJavaParserINT          = 37
	MiniJavaParserBOOL         = 38
	MiniJavaParserID           = 39
	MiniJavaParserWS           = 40
	MiniJavaParserCOMMENT      = 41
	MiniJavaParserLINE_COMMENT = 42
)

// MiniJavaParser rules.
const (
	MiniJavaParserRULE_goal                  = 0
	MiniJavaParserRULE_mainClassDeclaration  = 1
	MiniJavaParserRULE_classDeclaration      = 2
	MiniJavaParserRULE_mainClassBody         = 3
	MiniJavaParserRULE_mainMethod            = 4
	MiniJavaParserRULE_mainMethodDeclaration = 5
	MiniJavaParserRULE_classBody             = 6
	MiniJavaParserRULE_fieldDeclaration      = 7
	MiniJavaParserRULE_varDeclaration        = 8
	MiniJavaParserRULE_methodDeclaration     = 9
	MiniJavaParserRULE_methodBody            = 10
	MiniJavaParserRULE_formalParameters      = 11
	MiniJavaParserRULE_formalParameterList   = 12
	MiniJavaParserRULE_formalParameter       = 13
	MiniJavaParserRULE_type                  = 14
	MiniJavaParserRULE_statement             = 15
	MiniJavaParserRULE_expression            = 16
	MiniJavaParserRULE_methodArgumentList    = 17
	MiniJavaParserRULE_intArrayType          = 18
	MiniJavaParserRULE_booleanType           = 19
	MiniJavaParserRULE_intType               = 20
)

// IGoalContext is an interface to support dynamic dispatch.
type IGoalContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MainClassDeclaration() IMainClassDeclarationContext
	EOF() antlr.TerminalNode
	AllClassDeclaration() []IClassDeclarationContext
	ClassDeclaration(i int) IClassDeclarationContext

	// IsGoalContext differentiates from other interfaces.
	IsGoalContext()
}

type GoalContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGoalContext() *GoalContext {
	var p = new(GoalContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_goal
	return p
}

func InitEmptyGoalContext(p *GoalContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_goal
}

func (*GoalContext) IsGoalContext() {}

func NewGoalContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GoalContext {
	var p = new(GoalContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniJavaParserRULE_goal

	return p
}

func (s *GoalContext) GetParser() antlr.Parser { return s.parser }

func (s *GoalContext) MainClassDeclaration() IMainClassDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainClassDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainClassDeclarationContext)
}

func (s *GoalContext) EOF() antlr.TerminalNode {
	return s.GetToken(MiniJavaParserEOF, 0)
}

func (s *GoalContext) AllClassDeclaration() []IClassDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IClassDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IClassDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IClassDeclarationContext); ok {
			tst[i] = t.(IClassDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *GoalContext) ClassDeclaration(i int) IClassDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClassDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClassDeclarationContext)
}

func (s *GoalContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GoalContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GoalContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.EnterGoal(s)
	}
}

func (s *GoalContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.ExitGoal(s)
	}
}

func (s *GoalContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MiniJavaVisitor:
		return t.VisitGoal(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MiniJavaParser) Goal() (localctx IGoalContext) {
	localctx = NewGoalContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MiniJavaParserRULE_goal)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.MainClassDeclaration()
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == MiniJavaParserT__0 {
		{
			p.SetState(43)
			p.ClassDeclaration()
		}

		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(49)
		p.Match(MiniJavaParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMainClassDeclarationContext is an interface to support dynamic dispatch.
type IMainClassDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode
	MainClassBody() IMainClassBodyContext

	// IsMainClassDeclarationContext differentiates from other interfaces.
	IsMainClassDeclarationContext()
}

type MainClassDeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainClassDeclarationContext() *MainClassDeclarationContext {
	var p = new(MainClassDeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_mainClassDeclaration
	return p
}

func InitEmptyMainClassDeclarationContext(p *MainClassDeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_mainClassDeclaration
}

func (*MainClassDeclarationContext) IsMainClassDeclarationContext() {}

func NewMainClassDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainClassDeclarationContext {
	var p = new(MainClassDeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniJavaParserRULE_mainClassDeclaration

	return p
}

func (s *MainClassDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *MainClassDeclarationContext) ID() antlr.TerminalNode {
	return s.GetToken(MiniJavaParserID, 0)
}

func (s *MainClassDeclarationContext) MainClassBody() IMainClassBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainClassBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainClassBodyContext)
}

func (s *MainClassDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainClassDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainClassDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.EnterMainClassDeclaration(s)
	}
}

func (s *MainClassDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.ExitMainClassDeclaration(s)
	}
}

func (s *MainClassDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MiniJavaVisitor:
		return t.VisitMainClassDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MiniJavaParser) MainClassDeclaration() (localctx IMainClassDeclarationContext) {
	localctx = NewMainClassDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MiniJavaParserRULE_mainClassDeclaration)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Match(MiniJavaParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(52)
		p.Match(MiniJavaParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(53)
		p.MainClassBody()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IClassDeclarationContext is an interface to support dynamic dispatch.
type IClassDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode
	ClassBody() IClassBodyContext
	Type_() ITypeContext

	// IsClassDeclarationContext differentiates from other interfaces.
	IsClassDeclarationContext()
}

type ClassDeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassDeclarationContext() *ClassDeclarationContext {
	var p = new(ClassDeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_classDeclaration
	return p
}

func InitEmptyClassDeclarationContext(p *ClassDeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_classDeclaration
}

func (*ClassDeclarationContext) IsClassDeclarationContext() {}

func NewClassDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassDeclarationContext {
	var p = new(ClassDeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniJavaParserRULE_classDeclaration

	return p
}

func (s *ClassDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassDeclarationContext) ID() antlr.TerminalNode {
	return s.GetToken(MiniJavaParserID, 0)
}

func (s *ClassDeclarationContext) ClassBody() IClassBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClassBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClassBodyContext)
}

func (s *ClassDeclarationContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *ClassDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClassDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.EnterClassDeclaration(s)
	}
}

func (s *ClassDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.ExitClassDeclaration(s)
	}
}

func (s *ClassDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MiniJavaVisitor:
		return t.VisitClassDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MiniJavaParser) ClassDeclaration() (localctx IClassDeclarationContext) {
	localctx = NewClassDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MiniJavaParserRULE_classDeclaration)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(55)
		p.Match(MiniJavaParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(56)
		p.Match(MiniJavaParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == MiniJavaParserT__1 {
		{
			p.SetState(57)
			p.Match(MiniJavaParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(58)
			p.Type_()
		}

	}
	{
		p.SetState(61)
		p.ClassBody()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMainClassBodyContext is an interface to support dynamic dispatch.
type IMainClassBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MainMethod() IMainMethodContext

	// IsMainClassBodyContext differentiates from other interfaces.
	IsMainClassBodyContext()
}

type MainClassBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainClassBodyContext() *MainClassBodyContext {
	var p = new(MainClassBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_mainClassBody
	return p
}

func InitEmptyMainClassBodyContext(p *MainClassBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_mainClassBody
}

func (*MainClassBodyContext) IsMainClassBodyContext() {}

func NewMainClassBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainClassBodyContext {
	var p = new(MainClassBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniJavaParserRULE_mainClassBody

	return p
}

func (s *MainClassBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *MainClassBodyContext) MainMethod() IMainMethodContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainMethodContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainMethodContext)
}

func (s *MainClassBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainClassBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainClassBodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.EnterMainClassBody(s)
	}
}

func (s *MainClassBodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.ExitMainClassBody(s)
	}
}

func (s *MainClassBodyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MiniJavaVisitor:
		return t.VisitMainClassBody(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MiniJavaParser) MainClassBody() (localctx IMainClassBodyContext) {
	localctx = NewMainClassBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, MiniJavaParserRULE_mainClassBody)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(MiniJavaParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(64)
		p.MainMethod()
	}
	{
		p.SetState(65)
		p.Match(MiniJavaParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMainMethodContext is an interface to support dynamic dispatch.
type IMainMethodContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MainMethodDeclaration() IMainMethodDeclarationContext
	Statement() IStatementContext

	// IsMainMethodContext differentiates from other interfaces.
	IsMainMethodContext()
}

type MainMethodContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainMethodContext() *MainMethodContext {
	var p = new(MainMethodContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_mainMethod
	return p
}

func InitEmptyMainMethodContext(p *MainMethodContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_mainMethod
}

func (*MainMethodContext) IsMainMethodContext() {}

func NewMainMethodContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainMethodContext {
	var p = new(MainMethodContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniJavaParserRULE_mainMethod

	return p
}

func (s *MainMethodContext) GetParser() antlr.Parser { return s.parser }

func (s *MainMethodContext) MainMethodDeclaration() IMainMethodDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainMethodDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainMethodDeclarationContext)
}

func (s *MainMethodContext) Statement() IStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *MainMethodContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainMethodContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainMethodContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.EnterMainMethod(s)
	}
}

func (s *MainMethodContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.ExitMainMethod(s)
	}
}

func (s *MainMethodContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MiniJavaVisitor:
		return t.VisitMainMethod(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MiniJavaParser) MainMethod() (localctx IMainMethodContext) {
	localctx = NewMainMethodContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, MiniJavaParserRULE_mainMethod)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		p.MainMethodDeclaration()
	}
	{
		p.SetState(68)
		p.Match(MiniJavaParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(69)
		p.Statement()
	}
	{
		p.SetState(70)
		p.Match(MiniJavaParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMainMethodDeclarationContext is an interface to support dynamic dispatch.
type IMainMethodDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode

	// IsMainMethodDeclarationContext differentiates from other interfaces.
	IsMainMethodDeclarationContext()
}

type MainMethodDeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainMethodDeclarationContext() *MainMethodDeclarationContext {
	var p = new(MainMethodDeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_mainMethodDeclaration
	return p
}

func InitEmptyMainMethodDeclarationContext(p *MainMethodDeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniJavaParserRULE_mainMethodDeclaration
}

func (*MainMethodDeclarationContext) IsMainMethodDeclarationContext() {}

func NewMainMethodDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainMethodDeclarationContext {
	var p = new(MainMethodDeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniJavaParserRULE_mainMethodDeclaration

	return p
}

func (s *MainMethodDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *MainMethodDeclarationContext) ID() antlr.TerminalNode {
	return s.GetToken(MiniJavaParserID, 0)
}

func (s *MainMethodDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainMethodDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainMethodDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.EnterMainMethodDeclaration(s)
	}
}

func (s *MainMethodDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniJavaListener); ok {
		listenerT.ExitMainMethodDeclaration(s)
	}
}
